--- a/index.html
+++ b/index.html
@@ -22,5 +22,6 @@
 
 <script src="http://apps.bdimg.com/libs/angular.js/1.4.6/angular.min.js"></script>
 <script src="slider.js"></script>
+<script src="controller.js"></script>
 </body>
 </html>
