--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <style>
     *{ margin: 0;padding: 0; list-style-type: none; overflow: hidden;}
     .sliderBox{ width: 800px; height: 279px; margin: 0 auto;position: relative;}
-    .sliderBox .btn{ cursor: pointer; position: absolute; top:50%;margin-top: -25px; height: 52px; width: 52px; background: url("btn.png") top center; z-index: 5;}
+    .sliderBox .btn{ cursor: pointer; position: absolute; top:50%;margin-top: -25px; height: 52px; width: 52px; background: url("./img/btn.png") top center; z-index: 5;}
     .sliderBox .btn.left{left:5%;}
     .sliderBox .btn.right{right:5%; background-position: 0 -53px;}
 </style>
@@ -20,8 +20,8 @@
         <div class="btn right btnright"></div>
     </div>
 
-<script src="http://apps.bdimg.com/libs/angular.js/1.4.6/angular.min.js"></script>
-<script src="slider.js"></script>
-<script src="controller.js"></script>
+<script src="./js/angular.js"></script>
+<script src="./js/slider.js"></script>
+<script src="./js/controller.js"></script>
 </body>
 </html>
